# cc-portal-app

./: .gitattributes  .gitignore  README.md  pyproject.toml
cc_portal/: demo.py  hooks.py  modules.txt  patches.txt
cc_portal/cc_portal/doctype/cc_booking/: cc_booking.json  cc_booking.py
cc_portal/cc_portal/doctype/cc_briefing/: cc_briefing.json  cc_briefing.py
cc_portal/cc_portal/doctype/cc_credential/: cc_credential.json  cc_credential.py
cc_portal/cc_portal/doctype/cc_document/: cc_document.json  cc_document.py
cc_portal/cc_portal/doctype/cc_invoice/: cc_invoice.json  cc_invoice.py
cc_portal/cc_portal/doctype/cc_knowledge/: cc_knowledge.json  cc_knowledge.py
cc_portal/cc_portal/doctype/cc_loyalty_account/: cc_loyalty_account.json  cc_loyalty_account.py
cc_portal/cc_portal/doctype/cc_loyalty_reward/: cc_loyalty_reward.json  cc_loyalty_reward.py
cc_portal/cc_portal/doctype/cc_loyalty_transaction/: cc_loyalty_transaction.json  cc_loyalty_transaction.py
cc_portal/cc_portal/doctype/cc_payment/: cc_payment.json  cc_payment.py
cc_portal/cc_portal/doctype/cc_project/: cc_project.json  cc_project.py
cc_portal/cc_portal/doctype/cc_service/: cc_service.json  (+1 more)
cc_portal/fixtures/: role.json
cc_portal/patches/: create_cc_roles.py
cc_portal/public/frontend/: index.html
cc_portal/www/cc_portal/: index.py
frontend/: copy-html.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.js.timestamp-1781875457606-6e5baa827b0d28.mjs
frontend/src/: App.vue  index.css  main.js  router.js
frontend/src/pages/: Home.vue
(+6 files in other folders)
